feat: implement GET API call for fetching ChannelData

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.2.0"
 retrofit = "2.9.0"
 okhttp = "4.9.0"
 glide = "4.13.2"
+firebaseCrashlyticsBuildtools = "3.0.2"
 
 
 [libraries]
@@ -28,6 +29,7 @@ gsonConverter = { module = "com.squareup.retrofit2:converter-gson", version.ref 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glideCompiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 
 [plugins]
